Update for api/queue/list
